src/道渊数据库/V0.3/道渊_表格预设使用说明.md
# 道渊 v5.2 · 星河璀璨数据库 — 表格预设使用说明

> 唯一文件：[道渊_表格预设.json](./道渊_表格预设.json) — 直接导入脚本使用，与脚本内部对象结构 100% 一致。

---

## 一、覆盖的 6 张表（normal 模式）

| 表名（自定义） | 默认表名 | uid | 角色 |
|---|---|---|---|
| 全局数据表 | 全局数据表 | `sheet_Tthy3qCu` | 时空（元会历 + 修真地点格式）|
| **主角信息表** | 主角信息表 | `sheet_MOnWZqNh` | **10 列**：道号 / 性别年龄 / 外貌 / **身形**（v5.2 新增） / **衣着**（v5.2 新增） / 宗门 / 气运 / 过往经历 / 最近经历 / 性格 |
| 重要角色表 | 重要角色表 | `sheet_z9Vs0Mfg` | 修仙者 NPC（晏青/红蝶/温月清 预定），**新增境界/功法技能列**对齐 v5.2 MVU 人物结构 |
| **主角功法气运表** | 主角技能表 | `sheet_vCEaDkTU` | 九阳神功 + 四大真·气运，类型枚举沿用「主动/被动」|
| **储物袋** | 背包物品表 | `sheet_duvY6WgX` | 类别约束 + **v5.2 新增物品当前状态列**（归属/去向/寄拍/待移交） |
| **修真纪要表** | 纪要表 | `sheet_y6pLdAkZ` | 元会历时间跨度，AM 编码不变 |

`mate` 配置（注入位置、深度）沿用脚本默认。

> **本预设不含 `loot_table`、`important_non_romance`**——这两张是交火模式专用，《道渊》v5.2 是修真生活/养成路线，跑在 `normal` 模式即可。

---

## 二、与默认预设的差异

### 全部保留（兼容性）
- 9 个 sheet 槽位结构与 `mate` 配置
- 6 张表的字段命名/枚举与默认基本一致，仅 `note` / `initNode` / 表名改写
- `updateConfig` / `exportConfig` 全部默认值
- `orderNo` 排序
- 时间格式约束（`????-??-?? ??:??`）
- `code_index` 格式约束（`AM[0-9][0-9][0-9][0-9]`）
- 枚举（`is_absent`、`skill_type`）

### **改写部分**

- **主角信息表列调整**：把默认的「职业/身份」改为「宗门」（对齐 MVU 主角.宗门）；新增「气运」（汇总 MVU 主角.气运 标题）；新增「身形」（对齐 v5.2 MVU 主角.身形，≥30字体态描写）；新增「衣着」（对齐 v5.2 MVU 主角.衣着，≥30字含材质破损）；新增「最近经历」（与「过往经历」分工：过往=长期累积、最近=每轮覆盖）。共 10 列数据。
- **重要角色表列调整**：新增「境界」列（对齐 v5.2 MVU 人物.[NPC名].境界），插在性别/年龄之后；新增「功法技能」列（NPC 所修功法/剑诀/神通/法术/血脉天赋/本能能力名称，世界书格式不统一时从中提取并归一，性格/外貌/临时增益不计入，未明文填「（未提及）」），插在境界之后。共 9 列数据。
- 其它表的 `sourceData.note`：列说明改为修真语境，含字段范例。
- `sourceData.initNode`：初始化时插入与剧情起点匹配的条目（赤羽/晏青/红蝶/温月清/初始机遇等）。
- `sourceData.insertNode` / `updateNode` / `deleteNode`：SQL 示例改为修真上下文。
- 部分表的 `name`：「主角技能表 → 主角功法气运表」、「背包物品表 → 储物袋」、「纪要表 → 修真纪要表」（不影响表名 SQL DDL，仅 UI 显示）。
- 全部 `uid` 重新生成（避免与其他卡冲突）。

---

## 三、导入步骤

在酒馆扩展脚本「☰星河璀璨·数据库」的设置面板中，将 [道渊_表格预设.json](./道渊_表格预设.json) 的内容导入到脚本预设字段。具体字段名以脚本实际使用的键名为准（通常为 `tableTemplate` 或类似字段）。

也可通过 chrome-devtools MCP 直接注入：

```js
const preset = await (await fetch('http://localhost:9876/道渊_表格预设.json')).json();
const ST = window.SillyTavern.getContext();
const settings = ST.extensionSettings.__userscripts.shujuku_v120__userscript_settings_v1 ||= {};
settings.tableTemplate = JSON.stringify(JSON.stringify(preset, null, 2));
ST.saveSettingsDebounced?.();
```

---

## 四、和 MVU 协同建议

道渊的 MVU 数据结构（见 [MVU变量结构.md](./MVU变量结构.md)）和数据库表存在**部分对应**：

| MVU 路径 | SQL 表 / 列 | 对应关系 |
|---|---|---|
| `stat_data.主角.境界 / 灵根` | `protagonist_info.occupation` | 数值/字符串型修仙身份在 occupation 列 |
| `stat_data.主角.生命/精血/灵力/...` | （不存数据库） | 五维状态条仅 MVU 管，不入 SQL |
| `stat_data.主角.功法 / 气运` | `protagonist_skills` | 两套来源合并为一张技能表 |
| `stat_data.主角.储物袋` | `inventory` | 一一映射 |
| `stat_data.人物.[NPC名]` | `important_characters.name=NPC名` | NPC 表 |
| `stat_data.世界.当前时间/当前地点` | `global_state.cur_time / current_location` | 时空表 |
| `stat_data.绝色榜.[人物名]` | （不入数据库） | 仅 MVU 维护，作为榜单不进入纪要 |
| `stat_data.$器灵台词` | （不入数据库） | 仅 MVU 维护 |
| 无对应 | `chronicle` | 长期纪要由数据库脚本独立管理 |

**建议策略**：
- 让 MVU 继续负责"角色状态条 + 实时数值"
- 让数据库脚本负责"长期纪要(`chronicle`) + 历史快照"
- 两者**不强求双写**：MVU 是高频更新（每楼），数据库是结构化归档（每轮）

---

## 五、AI 填表语法（脚本期望）

数据库脚本期望 AI 在回复中用如下语法操作表格（不要求 AI 直接写 SQL）：

```text
<tableEdit>
insertRow(表格ID, {"0":"字段0值","1":"字段1值","2":"字段2值"})
updateRow(表格ID, 行号, {"0":"字段0值","1":"字段1值","2":"字段2值"})
deleteRow(表格ID, 行号)
</tableEdit>
```

- `表格ID` 即 `uid`（如 `sheet_Tthy3qCu`）
- 字段编号 `"0"/"1"/"2"...` 对应 `content[0]` 中除 `row_id` 外的列索引（`row_id` 不参与 AI 填写）
- 脚本侧会把这套调用翻译成对应 SQL（包含 `INSERT OR REPLACE` / `UPDATE` / `DELETE`）

**也可以让 AI 直接写 SQL**——脚本的 `insertNode/updateNode/deleteNode` 注释里给的就是 SQL 范例，AI 看了之后倾向直接输出 SQL。两种语法脚本侧应都能识别。

---

## 六、验证清单

导入后请检查：

- [ ] 数据库脚本面板内的表数 = 6（不算 `mate`）
- [ ] 表名显示「修真纪要表 / 主角功法气运表 / 储物袋 / 重要角色表 / 主角信息表 / 全局数据表」
- [ ] **主角信息表显示 10 列**（含 row_id）：人物名称 / 性别年龄 / 外貌特征 / 身形 / 衣着 / 宗门 / 气运 / 过往经历 / 最近经历 / 性格特点
- [ ] **重要角色表显示 9 列**（含 row_id）：姓名 / 性别年龄 / 境界 / 功法技能 / 一句话介绍 / 外貌特征 / 持有的重要物品 / 是否离场 / 过往经历
- [ ] 触发一次 AI 填表，观察首条 chronicle 是否使用 `AM0001`、`元会历` 格式
- [ ] 主角信息表初始化后：`char_name='赤羽'`、`body_type` 含身形描写、`clothing` 含衣着描写
- [ ] `protagonist_skills` 首批应有 5 条（九阳神功 + 四大气运）
- [ ] `global_state.cur_time` 是否为 4 位元会历年份（如 `3726-12-23 16:00`）

---

## 七、与世界书的关系

- 重要角色表（`exportConfig.enabled: true, splitByRow: true`）会把每个 NPC 行拆开**注入到世界书** —— 这是脚本内置的"实体卡片化"机制
- 纪要表（`exportConfig.enabled: true, splitByRow: true`）也会把每条纪要拆条注入，按 `编码索引` 作 keyword 索引
- 其它表 `exportConfig.enabled: false`，仅作为内部状态使用

**不要手动改这些** `exportConfig`，否则可能与脚本的世界书写入逻辑冲突。
